# UnityDeckLinkPlugin

./: .gitignore  LICENSE  README.md
Assets/Scenes/: New Material.mat  SampleScene.unity
Plugin/: CMakeLists.txt
Plugin/cmake/Modules/: FindDeckLink.cmake
Plugin/src/: DeckLinkCApi.cpp  DeckLinkCApi.hpp  DeckLinkInputStream.cpp  DeckLinkInputStream.hpp  DeckLinkManager.cpp  DeckLinkManager.hpp  DeckLinkOutputStream.cpp  DeckLinkOutputStream.hpp  DeckLinkVideoConverter.cpp  DeckLinkVideoConverter.hpp  DeckLinkVideoFrame.cpp  DeckLinkVideoFrame.hpp
ProjectSettings/: ProjectSettings.asset
build-Plugin-Desktop-Release/: CMakeCache.txt.prev  DeckLinkPlugin.cbp
build-Plugin-Desktop-Release/.cmake/api/v1/reply/: cmakeFiles-v1-bfdb81bec80d05cee114.json  target-DeckLink-Release-33d2cec7bb96e29bd7f8.json
build-Plugin-Desktop-Release/.cmake/api/v1/reply.prev/: cache-v2-78dbd4b078b9d08f83df.json  codemodel-v2-08c94f184b1b000226f1.json  index-2021-06-07T06-56-48-0703.json  target-DeckLinkPlugin-Release-28186adfdaf6c2472623.json
